fixing focus on mobile

--- a/style.css
+++ b/style.css
@@ -479,10 +479,10 @@ svg.anim > * {
 	.number {
 		font-size: 5vw;
 		padding: 1em 1.25em 0.8em 1.25em;
-		border-radius: 50%;
+		border-radius: 50%
 	}
 	.label {
-		font-size: 3.75vw;
+		font-size: 3.75vw
 	}
 	.overlay {
 		padding: 0;
@@ -490,11 +490,11 @@ svg.anim > * {
 	}
 	.overlay .modal {
 		padding: 7.5% 5%;
-		max-width: 90%;
+		max-width: 90%
 	}
 	input.mo {
 		max-width: 90vw;
-		margin-bottom: 15%;
+		margin-bottom: 15%
 	}
 	.create-title {
 		font-size: 7.5vw !important
@@ -506,7 +506,7 @@ svg.anim > * {
 		font-size: 7.5vw !important
 	}
 	.sup {
-		font-size: 8.75vw;
+		font-size: 8.75vw
 	}
 	.support-backdrop-title {
 		font-size: 7.5vw !important;
@@ -514,7 +514,7 @@ svg.anim > * {
 	}
 	h1 {
 		font-size: 7vw;
-		width: 90vw;
+		width: 90vw
 	}
 	.material, .material:focus {
 		font-size: 7vw;
@@ -524,11 +524,11 @@ svg.anim > * {
 		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)
 	}
 	.support-button {
-		font-size: 5vw;
+		font-size: 5vw
 	}
 }
 @media only screen and (min-width: 800px) {
 	svg.anim {
-		position: fixed;
+		position: fixed
 	}
 }
